--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>SSE</title>
   </head>
   <body>
-    <h1>sse implementation!</h1>
+    <main>
+      <h1>Received Messages</h1>
+
+      <section class="messages-container"></section>
+    </main>
+
+    <script src="client.js"></script>
   </body>
 </html>
